fixed layer visibility

--- a/style.scss
+++ b/style.scss
@@ -244,13 +244,14 @@ body {
   }
 }
 
-@media only screen and(max-width: 600px) {
+@media only screen and(max-width: 1000px) {
   /*  * {
     overflow-y: scroll;
   } */
   .menu {
-    position: relative;
+    position: absolute;
     right: 0;
+    bottom: 0;
     top: auto;
     display: flex;
     height: 30vh;
@@ -284,13 +285,14 @@ body {
     }
   }
   .canvasLayers {
-    width: 95vw;
-    height: 70vh;
+    margin: 20% auto 20% auto;
+    /* width: 95%;
+    height: 70%; */
     .canvasContainer {
-      width: 95vw;
-      height: 70vh;
+      /* width: 95%;
+      height: 70%; */
       & > canvas {
-        width: 500px;
+        width: 100%;
         height: 500px;
         // width: 95vw;
         // height: 70vh;
